# generational-cache

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust-ci.yml
docs/: crates.js  help.html  search-index.js  settings.html  source-files.js  src-files.js
docs/generational_cache/: all.html  index.html  sidebar-items.js
docs/generational_cache/arena/: enum.ArenaError.html  enum.Entry.html  index.html  sidebar-items.js  struct.Arena.html  struct.Index.html
docs/generational_cache/cache/: enum.Eviction.html  enum.Lookup.html  index.html  sidebar-items.js  trait.Cache.html
docs/generational_cache/cache/lru_cache/: enum.LRUCacheError.html  index.html  sidebar-items.js  struct.Block.html  struct.LRUCache.html  type.LRUCacheBlockArenaEntry.html
docs/generational_cache/collections/: index.html
docs/generational_cache/collections/list/: enum.ListError.html  index.html  sidebar-items.js  struct.Iter.html  struct.Link.html  (+3 more)
docs/generational_cache/map/: index.html  sidebar-items.js  trait.Map.html
docs/generational_cache/prelude/: index.html
docs/generational_cache/vector/: index.html  sidebar-items.js  trait.Vector.html
docs/src/generational_cache/: lib.rs.html
src/: lib.rs
src/arena/: mod.rs
src/arena/vector/: mod.rs
src/cache/: lru_cache.rs  mod.rs
src/collections/: list.rs  mod.rs
src/impls/: array.rs
src/map/: mod.rs
src/map/impls/: alloc_btree_map.rs  mod.rs
src/vector/: mod.rs
src/vector/impls/: alloc_vec.rs  allocvec.rs  array.rs  mod.rs
tests/: alloc_btree_map.rs  alloc_vec.rs  allocbtreemap.rs  allocvec.rs  array.rs
(+68 files in other folders)
