[package]
name = "generational-cache"
description = "Generational Arena based cache impls. in 100% safe, [no_std] compatible Rust."
repository = "https://github.com/arindas/generational-cache"
license = "MIT"
keywords = ["cache", "lru-cache", "generational-arena", "no-std"]
categories = ["algorithms", "caching"]
exclude = [".github/"]
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
